Fix whitespace pad on li

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -158,5 +158,4 @@ section + section {
 .shell-body li {
   position: relative;
   padding: 0 0 0 15px;
-    white-space: nowrap;
 }
